# lidar_localization

./: CMakeLists.txt
doc/html/: annotated.html  classes.html  classlidar__localization_1_1_lidar_localization-members.html  classlidar__localization_1_1_lidar_localization.html  classlidar__localization_1_1_lidar_localization_a04d3a4b74bedc8fc9c3d966ecf7df14e_icgraph.map  classlidar__localization_1_1_lidar_localization_a04d3a4b74bedc8fc9c3d966ecf7df14e_icgraph.md5  classlidar__localization_1_1_lidar_localization_a20af6bb9caa3c3ff877d065806281d59_cgraph.map  classlidar__localization_1_1_lidar_localization_a20af6bb9caa3c3ff877d065806281d59_cgraph.md5  classlidar__localization_1_1_lidar_localization_a20af6bb9caa3c3ff877d065806281d59_icgraph.map  classlidar__localization_1_1_lidar_localization_a20af6bb9caa3c3ff877d065806281d59_icgraph.md5  classlidar__localization_1_1_lidar_localization_a2a4c81f163cd8dea0f4643655d53df5c_cgraph.map  classlidar__localization_1_1_lidar_localization_a2a4c81f163cd8dea0f4643655d53df5c_cgraph.md5  classlidar__localization_1_1_lidar_localization_a2a4c81f163cd8dea0f4643655d53df5c_icgraph.map  classlidar__localization_1_1_lidar_localization_a2a4c81f163cd8dea0f4643655d53df5c_icgraph.md5  classlidar__localization_1_1_lidar_localization_a391bb5bfc224b5a491697a3c67202f7c_icgraph.map  classlidar__localization_1_1_lidar_localization_a391bb5bfc224b5a491697a3c67202f7c_icgraph.md5  classlidar__localization_1_1_lidar_localization_a5448ffcf1e352cfa916d8208c5e1a92a_icgraph.map  classlidar__localization_1_1_lidar_localization_a5448ffcf1e352cfa916d8208c5e1a92a_icgraph.md5  classlidar__localization_1_1_lidar_localization_a621721d2966c54ae3702de4173846863_cgraph.map  classlidar__localization_1_1_lidar_localization_a621721d2966c54ae3702de4173846863_cgraph.md5  classlidar__localization_1_1_lidar_localization_a621721d2966c54ae3702de4173846863_icgraph.map  classlidar__localization_1_1_lidar_localization_a621721d2966c54ae3702de4173846863_icgraph.md5  classlidar__localization_1_1_lidar_localization_a6816e3a63bf63d3594ebc6abc2efd9e0_icgraph.map  classlidar__localization_1_1_lidar_localization_a6816e3a63bf63d3594ebc6abc2efd9e0_icgraph.md5  classlidar__localization_1_1_lidar_localization_a9d876e1aca612d4a3240bb139a985fd3_icgraph.map  classlidar__localization_1_1_lidar_localization_a9d876e1aca612d4a3240bb139a985fd3_icgraph.md5  classlidar__localization_1_1_lidar_localization_ab77d763618bd98b80de06ce0ccc12f1a_icgraph.map  classlidar__localization_1_1_lidar_localization_ab77d763618bd98b80de06ce0ccc12f1a_icgraph.md5  classlidar__localization_1_1_lidar_localization_ac6655cf48dace6fa021c8ab6c1bbfa34_cgraph.map  classlidar__localization_1_1_lidar_localization_ac6655cf48dace6fa021c8ab6c1bbfa34_cgraph.md5  classlidar__localization_1_1_lidar_localization_ac6655cf48dace6fa021c8ab6c1bbfa34_icgraph.map  classlidar__localization_1_1_lidar_localization_ac6655cf48dace6fa021c8ab6c1bbfa34_icgraph.md5  classlidar__localization_1_1_lidar_localization_ac9007f2fa0eb372c5458927caa1d7c92_cgraph.map  classlidar__localization_1_1_lidar_localization_ac9007f2fa0eb372c5458927caa1d7c92_cgraph.md5  classlidar__localization_1_1_lidar_localization_ac9007f2fa0eb372c5458927caa1d7c92_icgraph.map  classlidar__localization_1_1_lidar_localization_ac9007f2fa0eb372c5458927caa1d7c92_icgraph.md5  classlidar__localization_1_1_lidar_localization_acd9e52386e83f8b83145e4fbb5972ab9_icgraph.map  classlidar__localization_1_1_lidar_localization_acd9e52386e83f8b83145e4fbb5972ab9_icgraph.md5  classlidar__localization_1_1_lidar_localization_ad64ba456613681fa1c442cc3bf1c83c1_cgraph.map  classlidar__localization_1_1_lidar_localization_ad64ba456613681fa1c442cc3bf1c83c1_cgraph.md5  (+66 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  (+37 more)
include/lidar_localization/: area_obstacles_extractor.h  laser_scan_tranformer.h  lidar_localization.h  polygon.h
launch/: lidar_localization.launch  nodelets.launch  rosbag_lidar_localization.launch
params/: lidar_localization_params.yaml  obstacle_excrator_params.yaml
src/: area_obstacles_extractor.cpp  lidar_localization.cpp
src/nodes/: area_obstacles_extractor_node.cpp
(+1 files in other folders)
